[project]
name = "amm-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-openai>=1.1.11",
    "pinecone>=8.1.0",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "sentence-transformers>=5.3.0",
]
